# Chess

./: .clang-format  .data  .gitignore  CMakeLists.txt  Makefile  chess  chess.c  chess.h  data.c  data.h  moves.c  readme.md
gdslib/: .clang-format  .gitignore
gdslib/include/: gallocator.h  garraylist.h  garraystack.h  gcircular_array.h  gds_types.h  gitr.h  glinkedlist.h  gnode.h  gnodes_types.h  gpriority_queue.h  gqueue.h  gringbuffer.h  gstack.h  gtree.h
include/: arena.h  chess.h  data.h  networking.h
src/: chess.c  chess_gui.c  chess_tui.c  common.c  data.c  game.c  gui.c  menu.c  moves.c  networking.c  server.c
